# Ros2_practices

./: .gitignore  README.md
src/my_first_pkg/: CMakeLists.txt  package.xml  setup.py
src/my_first_pkg/my_first_pkg/: listener_py.py  talker_py.py
