<?xml version="1.0"?>
<package format="3">
  <name>my_first_pkg</name>
  <version>0.0.1</version>
  <description>A simple publisher-subscriber package in Python</description>
  <maintainer email="shahidhasib586@gmail.com">Shahid Ahamed Hasib</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
